# AzureSnapshotResourceModule

./: .gitignore  .pylintrc  README.md  pyproject.toml
module_snapshot/entities/: snapshot_model.py
module_snapshot/infra/: authenticate.py  azure_cloud_services.py  config.py
module_snapshot/services/: az_snapshot_services.py
module_snapshot/utils/: exception.py  tag_exception.py  type_validation.py
tests/: conftest.py  test_azure_cloud_services.py  test_snapshot_services.py
